# rust-swe

./: .gitignore  Cargo.toml  DOCS_INDEX.md  DOCUMENTATION.md  GPU_GUIDE.md  README.md  run_tests.sh
.github/: CI.md
.github/workflows/: ci.yml  version-on-ci-success.yml
cpp/: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  build.sh
cpp/.github/workflows/: cpp-ci.yml
cpp/docs/: API.md  EXAMPLES.md  INDEX.md  QUICKSTART.md
cpp/examples/: CMakeLists.txt  dam_break.cpp  radial_dam.cpp  tsunami.cpp
cpp/include/: gpu_solver.hpp  io.hpp  mesh.hpp  solver.hpp  types.hpp
cpp/src/: boundary.cpp  gpu_solver.cpp  io.cpp  main.cpp  mesh.cpp  solver.cpp
cpp/tests/: CMakeLists.txt  test_mesh.cpp  test_solver.cpp  test_types.cpp
src/: gpu_solver.rs  main.rs  mesh.rs  solver.rs
src/shaders/: shallow_water.wgsl
