[package]
name = "shallow-water-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
