[package]
name = "shallow-water-solver"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
wgpu = { version = "23.0", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }
pollster = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }

[features]
default = ["cpu"]
cpu = []
gpu = ["wgpu", "bytemuck", "pollster", "futures"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
